--- a/todo-app/src/components/action-item-card/action-item-card.css
+++ b/todo-app/src/components/action-item-card/action-item-card.css
@@ -1,5 +1,4 @@
 .action-item-card {
-
     aspect-ratio: 1 / 1;
     background-color: var(--dialog-background);
     color: var(--text-color);
@@ -11,115 +10,135 @@
     flex-direction: column;
     position: relative;
     margin-right: 20px;
-
-    border: 1px solid var(--muted-line-color);
-    box-shadow:
-        0 0 2px 2px rgba(200, 200, 200, 0.5),
-        0 0 10px 5px rgba(200, 200, 200, 0.2),
-        0 0 20px 10px rgba(200, 200, 200, 0.1),
-        0 0 30px 15px rgba(255, 255, 255, 0.05);
+    box-shadow: 0 0 5px rgba(200, 200, 200, 0.3);
 }
 
 .action-item-card:hover {
-    border: 1px solid rgb(200, 200, 200);
-    background-image: radial-gradient(circle at center,
-            var(--dialog-background) 0%,
-            var(--dialog-background) 70%,
-            rgba(200, 200, 200, 0.03) 80%,
-            rgba(200, 200, 200, 0.01) 100%);
-    box-shadow:
-        0 0 2px 2px rgba(200, 200, 200, 0.7),
-        0 0 10px 5px rgba(200, 200, 200, 0.3),
-        0 0 20px 10px rgba(200, 200, 200, 0.2),
-        0 0 30px 15px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 10px rgba(200, 200, 200, 0.5);
 }
 
-.action-item-card::before {
-    background: linear-gradient(45deg, rgba(200, 200, 200, 0.5), rgba(220, 220, 220, 0.3), rgba(255, 255, 255, 0.1));
-}
-
-/* Overdue (red) */
-.action-item-card.overdue {
-    border: 1px solid rgb(255, 58, 58);
-    box-shadow:
-        0 0 2px 2px rgba(255, 58, 58, 0.5),
-        0 0 10px 5px rgba(255, 58, 58, 0.2),
-        0 0 20px 10px rgba(255, 75, 20, 0.1),
-        0 0 30px 15px rgba(255, 255, 255, 0.05);
-}
-
-.action-item-card.overdue:hover {
-    border: 1px solid rgb(253, 72, 72);
-    background-image: radial-gradient(circle at center,
-            var(--dialog-background) 0%,
-            var(--dialog-background) 70%,
-            rgba(255, 58, 58, 0.03) 80%,
-            rgba(255, 58, 58, 0.01) 100%);
-    box-shadow:
-        0 0 2px 2px rgba(255, 58, 58, 0.7),
-        0 0 10px 5px rgba(255, 58, 58, 0.3),
-        0 0 20px 10px rgba(255, 75, 20, 0.2),
-        0 0 30px 15px rgba(255, 255, 255, 0.1);
-}
-
-.action-item-card.overdue::before {
-    background: linear-gradient(45deg, rgba(255, 0, 0, 0.5), rgba(255, 128, 0, 0.3), rgba(255, 255, 255, 0.1));
-}
-
-/* Due soon (orange) */
+/* Overdue and Due Soon */
+.action-item-card.overdue,
 .action-item-card.due-soon {
-    border: 1px solid rgb(219, 125, 57);
-    box-shadow:
-        0 0 2px 2px rgba(219, 125, 57, 0.5),
-        0 0 10px 5px rgba(219, 125, 57, 0.2),
-        0 0 20px 10px rgba(219, 145, 77, 0.1),
-        0 0 30px 15px rgba(255, 255, 255, 0.05);
+    border: none;
+    position: relative;
+    z-index: 0;
 }
 
-.action-item-card.due-soon:hover {
-    border: 1px solid rgb(229, 135, 67);
-    background-image: radial-gradient(circle at center,
-            var(--dialog-background) 0%,
-            var(--dialog-background) 70%,
-            rgba(219, 125, 57, 0.03) 80%,
-            rgba(219, 125, 57, 0.01) 100%);
-    box-shadow:
-        0 0 2px 2px rgba(219, 125, 57, 0.7),
-        0 0 10px 5px rgba(219, 125, 57, 0.3),
-        0 0 20px 10px rgba(219, 145, 77, 0.2),
-        0 0 30px 15px rgba(255, 255, 255, 0.1);
+/* .action-item-card.overdue::before,
+.action-item-card.due-soon::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    z-index: -1;
+    
+    animation: gradient 1s ease infinite;
+    border-radius: 12px;
+} */
+
+.action-item-card.overdue::before,
+.action-item-card.due-soon::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    z-index: -1;
+    border-radius: 12px;
+    background-size: 300% 300%;
+    animation: rotate-gradient 15s linear infinite;
+}
+
+@keyframes rotate-gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+
+    100% {
+        background-position: 200% 0%;
+    }
+}
+
+.action-item-card.overdue::after,
+.action-item-card.due-soon::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    background: var(--dialog-background);
+    border-radius: 9px;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+/* .action-item-card.overdue::before {
+    background: linear-gradient(45deg,
+            rgb(162, 0, 255),
+            #ff3300,
+            #ff6600,
+            #ff3300,
+            #ff0000);
 }
 
 .action-item-card.due-soon::before {
-    background: linear-gradient(45deg, rgba(219, 125, 57, 0.5), rgba(229, 145, 77, 0.3), rgba(255, 255, 255, 0.1));
+    background: linear-gradient(45deg,
+            #ffcc00,
+            #ffaa00,
+            #ff8800,
+            #ffaa00,
+            #ffcc00);
+} */
+
+.action-item-card.overdue::before {
+    background-image: linear-gradient(90deg,
+            rgb(255, 0, 234),
+
+            #ff2600,
+            #ff3300,
+            #ffb121,
+            #ff3300,
+            #ff0000,
+            rgb(255, 0, 183));
+
 }
+
+.action-item-card.due-soon::before {
+    background-image: linear-gradient(90deg,
+            #ffcc00,
+            #ff6600,
+            #ff6f00,
+            #ffcc00);
+}
+
+
 
 /* Completed (green) */
 .action-item-card.completed {
     border: 1px solid rgb(51, 196, 162);
-    box-shadow:
-        0 0 2px 2px rgba(51, 196, 99, 0.5),
-        0 0 10px 5px rgba(51, 196, 99, 0.2),
-        0 0 20px 10px rgba(71, 216, 119, 0.1),
-        0 0 30px 15px rgba(255, 255, 255, 0.05);
+    box-shadow: 0 0 10px rgba(51, 196, 99, 0.3);
 }
 
 .action-item-card.completed:hover {
-    border: 1px solid rgb(61, 206, 109);
-    background-image: radial-gradient(circle at center,
-            var(--dialog-background) 0%,
-            var(--dialog-background) 70%,
-            rgba(51, 196, 99, 0.03) 80%,
-            rgba(51, 196, 99, 0.01) 100%);
-    box-shadow:
-        0 0 2px 2px rgba(51, 196, 157, 0.7),
-        0 0 10px 5px rgba(51, 196, 99, 0.3),
-        0 0 20px 10px rgba(71, 216, 119, 0.2),
-        0 0 30px 15px rgba(255, 255, 255, 0.1);
-}
-
-.action-item-card.completed::before {
-    background: linear-gradient(45deg, rgba(51, 196, 165, 0.5), rgba(71, 216, 119, 0.3), rgba(255, 255, 255, 0.1));
+    box-shadow: 0 0 15px rgba(51, 196, 99, 0.5);
 }
 
 .card-content {
@@ -128,6 +147,7 @@
     height: 100%;
     padding: 10px;
     position: relative;
+    z-index: 1;
 }
 
 .card-header {
@@ -142,8 +162,6 @@
     font-weight: bold;
     line-height: 1.2;
     max-height: 2.4em;
-    /* overflow: hidden; */
-    /* display: -webkit-box; */
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     margin-bottom: 20px;
@@ -193,20 +211,6 @@
 .description {
     margin-bottom: 5px;
 }
-
-/* .expand-toggle {
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    cursor: pointer;
-    background-color: var(--dialog-background);
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 .card-actions {
     position: absolute;
