--- a/todo-app/src/routes/quick-todo-page/quick-todo-page.css
+++ b/todo-app/src/routes/quick-todo-page/quick-todo-page.css
@@ -210,7 +210,7 @@
 .recently-added-item {
 	position: relative;
 	left: 0;
-	color: #fce4ec;
+	color: var(--text-color);
 	margin: 4px 0;
 	border-left: 2px solid var(--pink-neon);
 	transition: var(--recent-items-animation-time);
