fixed UTC error, added context admin

--- a/todo-app/src/components/action-item-card/action-item-card.html
+++ b/todo-app/src/components/action-item-card/action-item-card.html
@@ -31,7 +31,7 @@
 			</div>
 
 			<div class="card-actions">
-				<i class="bi bi-trash icon mx-3" click.trigger="deleteItem()"></i>
+				<i class="bi bi-trash icon mx-3" click.trigger="deleteItem()" show.bind="!editingDate"></i>
 				<!-- <button class="btn btn-sm btn-danger" click.trigger="deleteItem()">
                     <i class="bi bi-trash"></i>
                 </button> -->
