--- a/todo-app/src/dialogs/column-select-dialog/column-select-dialog.css
+++ b/todo-app/src/dialogs/column-select-dialog/column-select-dialog.css
@@ -1,4 +1,3 @@
-/* src/dialogs/column-select-dialog/column-select-dialog.css */
 au-dialog-container {
     background-color: rgba(0, 0, 0, 0.15);
     padding-bottom: 10vh;
@@ -49,7 +48,7 @@ au-dialog-container>div {
 }
 
 .column-select-dialog .drag-handle {
-    /* color: var(--text-muted-color); */
+
     cursor: move;
     user-select: none;
 }
@@ -94,7 +93,58 @@ au-dialog-container>div {
     justify-content: space-between;
 }
 
-.column-list {
+/* .column-list {
     width: 48%;
-    /* Adjust as needed */
+
+} */
+
+.column-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    max-height: 60vh;
+    overflow-y: auto;
+}
+
+.column-list li {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #444;
+    margin-bottom: -1px;
+    /* Overlap borders */
+    background-color: var(--dialog-background);
+    cursor: grab;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.column-list li:first-child {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.column-list li:last-child {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.column-list li.drag-over {
+    background-color: var(--primary-color);
+    color: white;
+}
+
+.column-list label {
+    flex-grow: 1;
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+.drag-handle {
+    margin-left: auto;
+    color: #888;
+    cursor: grab;
+}
+
+.column-select-dialog {
+    background-color: var(--dialog-background);
 }
